TODO

- check why resid(fit) and resid(fit0) for linear model not working