@@ -55,7 +55,7 @@ plot(x,y)
 curve(a+b*x+c*x^2, add = TRUE)
 ## IGNORE_RDIFF_BEGIN ## nlsj does not call "port" (yet??)
 ## nlsj(y ~ a+b*x+c*I(x^2), start = c(a=1, b=1, c=0.1), algorithm = "port")
-nlsj(y ~ a+b*x+c*I(x^2), start = c(a=1, b=1, c=0.1))
+nlsj(y ~ a+b*x+c*x^2, start = c(a=1, b=1, c=0.1))
 # ?? (fm <- nlsj(y ~ a+b*x+c*I(x^2), start = c(a=1, b=1, c=0.1),
 # ??           algorithm = "port", lower = c(0, 0, 0)))
 ## IGNORE_RDIFF_END
